[package]
name = "genTests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "1.11.0", features = ["hex", "json", "macros"] }
blake3 = "1.1.0"
sha2 = "0.9.8"
hex = "0.4.3"
aes = "0.7"
fpe = "0.5.1"

[build-dependencies]
cc = "1.0.50"
bindgen = "0.53.1"